--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+
+
+/* .Footer{
+  padding: 80px;
+  height: 313px;
+  /* background-color: black; */
+  /* color: white; */
+
+/* }  */
+
+.MuiButton-containedPrimary{
+  background-color:  #f05f40!important;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.MuiList-padding{
+  padding-left: 35% !important;
+}
+.MuiAppBar-colorPrimary{
+  background-color: white !important;
+}
+
+.MuiOutlinedInput-root .MuiOutlinedInput-notchedOutline{
+  border-color: #f05f40 !important;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+}
+
+a{
+  text-decoration: none !important;
+  color: black !important;
+} 
+
+a:hover {
+  color: #f05f40 !important;
+}
+
+.Footer{
+  margin-top: 15% !important;
+  color: aliceblue !important;
+  background-color: #222 !important;
+  height: 80px !important;
+
 }
